--- a/rpn_manual.html
+++ b/rpn_manual.html
@@ -54,7 +54,7 @@ figcaption {
 </div>
 <hr>
 </header><main>
-<h2>RPN 计算器使用说明书</h2>
+<h2>RPN 计算器使用说明书666</h2>
 <p>本程序为命令行逆波兰（RPN）计算器，支持整数、浮点数、四则运算及扩展数学函数。</p>
 <p>所有输入按「空格」分隔；一行即一次求值，回车得结果。</p>
 <h3>1. 安装与编译</h3>
